--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,8 +12,8 @@ services:
       POSTGRES_DB: castmatch_db
       # Remove host auth method to use password authentication properly
       POSTGRES_INITDB_ARGS: "--encoding=UTF8 --locale=en_US.utf8"
-      # Use md5 authentication for external connections 
-      POSTGRES_HOST_AUTH_METHOD: md5
+      # Use trust authentication for local connections 
+      POSTGRES_HOST_AUTH_METHOD: trust
     volumes:
       - postgres_data:/var/lib/postgresql/data
       # Add init script to ensure proper permissions
